--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li class="nav-item">
                         <a class="nav-link smooth-link" href="#act">Cultural</a>
                     </li>
-                   < <li class="nav-item">
+                    <li class="nav-item">
                             <a class="nav-link smooth-link" href="#tech">Technical</a>
                         </li>
                     <li class="nav-item">
