Changes in index

--- a/score.html
+++ b/score.html
@@ -82,7 +82,7 @@
                         <td><center>440</center></td>
                     </tr>
                     <tr>
-                            <td><BE ELECTRONICS</td>
+                            <td>BE ELECTRONICS</td>
                             <td><center>375</center></td>
                         </tr>
                         <tr>
