Linked intra badminton post

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                                                                                        <button class="accordion">More Info</button>
                                                                                        <div class="panel">
                                                                                            <p><br><b>BRANCH:</b>SE-I.T.<br> <b>CONTACT NO:</b> 7738456280<br> 
-                                                                                               <b>EMAIL ID:</b><br>anu@tmail.com<br>
+                                                                                               <b>EMAIL ID:</b><br>anu@tmail.in<br>
                                                                                            </p>
                                                                                        </div>
                                                                                    </div>
@@ -531,7 +531,7 @@
                 <br>
                 <div class="row text-center" style="margin: 0 auto;">
                         <div class="col-sm-4 col-xs-4">
-                                <img src="img/ib.jpg" alt="intra badminton" width="250px" height="250px"></img>
+                               <a href="https://www.instagram.com/p/B1ELPy3nDQr/?igshid=a9g1zcai0kg3"><img src="img/ib.jpg" alt="intra badminton" width="250px" height="250px"></img></a> 
                                 <br><br><h4 class="section-title text-center"><b>Intra Badminton</b></h4>
                                 <p class="section-lead text-center text-muted">Coming Soon!<br><br></p></div>
                                 
